test/error/ConstructorSealed.ci
public class Test
{
	public sealed Test() { //ERROR: Constructor cannot be sealed
	}
}
